infer/tests/codetoanalyze/cpp/errors/reference/temporary_lvalue.cpp
../../frontend/reference/temporary_lvalue.cpp